src/objects/Apttus_Config2__MilestoneTemplate__c.object
<CustomObject>
    <description>Represents a template for creating milestones</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the template is active</description>
        <inlineHelpText>Indicates whether the template is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Category__c</fullName>
        <description>The milestone category.</description>
        <inlineHelpText>The milestone category.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The milestone description</description>
        <inlineHelpText>The milestone description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated parent template</description>
        <inlineHelpText>ID of the associated parent template</inlineHelpText>
        <label>Parent</label>
        <referenceTo>Apttus_Config2__MilestoneTemplate__c</referenceTo>
        <relationshipLabel>Child Templates</relationshipLabel>
        <relationshipName>ChildTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The milestone type</description>
        <inlineHelpText>The milestone type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Milestone</fullName>
                    <default>true</default>
                    <label>Milestone</label>
                </value>
                <value>
                    <fullName>Deliverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>